<resources>
    <string name="app_name">AAAA MODS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="explore">EXPLORE</string>
    <string name="text_here">TEXT_HERE</string>
    <string name="favorite">FAVORITE</string>
    <string name="minecraft">MINECRAFT</string>
    <string name="mods">MODS</string>
    <string name="download_complete">FILE DOWNLOAD COMPLETE</string>
    <string name="download_complete_description">If you satisfied with our app, would you mind taking a moment to rate it?</string>
    <string name="text_description_1">Normal text \n\n after line text</string>
    <string name="update_text">UPDATED TODAY</string>
    <string name="back_header">BACK</string>
    <string name="loading">Downloading...</string>
    <string name="later">LATER</string>
    <string name="never">NEVER</string>
    <string name="rationale_write_permission">We need this permission for saving file to Downloads</string>
    <string name="minecraft_not_found_title">MINECRAFT NOT FOUND!</string>
    <string name="minecraft_not_found_description">You need official minecraft game to install any mods or addons to enjoy the fun. Please download from Google Play.</string>
    <string name="ok_button">OKAY</string>
    <string name="cancel">CANCEL</string>
</resources>
