<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/toolbar_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/toolbar_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/toolbar_menu"
                        android:layout_width="@dimen/toolbar_menu_width"
                        android:layout_height="@dimen/toolbar_menu_height"
                        android:src="@drawable/ic_burger"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin"/>
                    <TextView
                        android:id="@+id/toolbar_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/explore"
                        android:layout_marginTop="14dp"
                        android:layout_centerHorizontal="true"
                        android:textSize="20dp"
                        fontPath="fonts/CentieSans.ttf"
                        android:textColor="@color/colorPrimaryDark"
                        tools:ignore="MissingPrefix" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/toolbar_menu"/>

                    <ImageView
                        android:id="@+id/toolbar_search"
                        android:layout_width="@dimen/toolbar_menu_width"
                        android:layout_height="@dimen/toolbar_menu_height"
                        android:src="@drawable/search"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin"/>

                </RelativeLayout>

            </RelativeLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar_header"
                android:layout_above="@id/ad_container">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/tab_layout"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@color/background_color"
                        app:layout_scrollFlags="scroll|enterAlways">

                        <RelativeLayout
                            android:id="@+id/text_container"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin">

                            <TextView
                                android:id="@+id/button_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                fontPath="fonts/CentieSans.ttf"
                                tools:ignore="MissingPrefix"
                                android:textColor="@color/toolbar_text_color"
                                android:text="@string/text_here"/>

                            <View
                                android:id="@+id/under_text_line"
                                android:layout_width="26dp"
                                android:layout_height="4dp"
                                android:layout_marginBottom="4dp"
                                android:layout_alignParentBottom="true"
                                android:background="@color/white" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@id/text_container">

                        <TextView
                            android:id="@+id/button_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textColor="@color/toolbar_text_color_favorite"
                            android:background="@null"
                            fontPath="fonts/CentieSans.ttf"
                            tools:ignore="MissingPrefix"
                            android:text="@string/favorite"/>
                        <View
                            android:id="@+id/under_favorite_line"
                            android:layout_width="26dp"
                            android:layout_height="4dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="4dp"
                            android:background="@color/white"/>
                        </RelativeLayout>
                    </RelativeLayout>

                </com.google.android.material.appbar.AppBarLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contentView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/toolbar_header"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:listitem="@layout/item_mods_list" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>
            
            <FrameLayout
                android:id="@+id/ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

<!--        <com.google.android.material.navigation.NavigationView-->
<!--            android:id="@+id/nav_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="start"-->
<!--            android:background="@color/white"-->
<!--            app:itemTextColor="@color/colorPrimaryDark"-->
<!--            app:menu="@menu/navigation_menu"/>-->

    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>